[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/ui/ToolbarItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/ToolBar.gd" type="Script" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/ui/UI.gd" type="Script" id=4]
[ext_resource path="res://src/InfoPanel.gd" type="Script" id=5]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="ButtonGroup" id=7]

[sub_resource type="ButtonGroup" id=8]

[sub_resource type="ButtonGroup" id=9]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 293.0
mouse_filter = 2
alignment = 2

[node name="ToolBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 498.0
margin_bottom = 286.0
mouse_filter = 2
alignment = 1
script = ExtResource( 2 )

[node name="ToolItem1" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 81.0
margin_top = 0.0
margin_right = 113.0
margin_bottom = 32.0
group = SubResource( 1 )

[node name="ToolItem2" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 117.0
margin_top = 0.0
margin_right = 149.0
margin_bottom = 32.0
group = SubResource( 2 )

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/ToolBar"]
margin_left = 153.0
margin_right = 157.0
margin_bottom = 32.0

[node name="PlantItem1" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 161.0
margin_top = 0.0
margin_right = 193.0
margin_bottom = 32.0
group = SubResource( 3 )

[node name="PlantItem2" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 197.0
margin_top = 0.0
margin_right = 229.0
margin_bottom = 32.0
group = SubResource( 4 )

[node name="PlantItem3" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 233.0
margin_top = 0.0
margin_right = 265.0
margin_bottom = 32.0
group = SubResource( 5 )

[node name="PlantItem4" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 269.0
margin_top = 0.0
margin_right = 301.0
margin_bottom = 32.0
group = SubResource( 6 )

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/ToolBar"]
margin_left = 305.0
margin_right = 309.0
margin_bottom = 32.0

[node name="BuildItem1" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 313.0
margin_top = 0.0
margin_right = 345.0
margin_bottom = 32.0
group = SubResource( 7 )

[node name="BuildItem2" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 349.0
margin_top = 0.0
margin_right = 381.0
margin_bottom = 32.0
group = SubResource( 8 )

[node name="BuildItem3" parent="MarginContainer/VBoxContainer/ToolBar" instance=ExtResource( 1 )]
margin_left = 385.0
margin_top = 0.0
margin_right = 417.0
margin_bottom = 32.0
group = SubResource( 9 )

[node name="InfoPanel" type="PanelContainer" parent="."]
visible = false
margin_left = 281.0
margin_top = 105.0
margin_right = 419.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 81.0
size_flags_horizontal = 11
size_flags_vertical = 11

[node name="Title" type="Label" parent="InfoPanel/VBoxContainer"]
margin_right = 124.0
margin_bottom = 14.0
text = "Tower"
align = 1
autowrap = true

[node name="Description" type="Label" parent="InfoPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 124.0
margin_bottom = 32.0
text = "I am error"
autowrap = true

[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
